# context-coroutine

./: Cargo.toml  LICENSE  README.md
src/: ChildOutcome.rs  Coroutine.rs  CoroutineGenerationCounter.rs  CoroutineInstance.rs  CoroutineInstanceAllocator.rs  CoroutineInstanceHandle.rs  CoroutineInstancePointer.rs  CoroutineManager.rs  CoroutineManagerIndex.rs  CoroutineMemory.rs  CoroutineMemorySource.rs  CoroutineMemoryWarehouse.rs  ParentInstructingChild.rs  ResumeOnTopFunction.rs  ResumeOutcome.rs  SimpleStack.rs  StackAndTypeSafeTransfer.rs  StartOutcome.rs  StartedCoroutineInstance.rs  StartedStackAndTypeSafeTransfer.rs  TaggedRelativePointerToData.rs  TransferExt.rs  TransferableData.rs  TypeSafeTransfer.rs  UserBits.rs  Yielder.rs  choose_coroutine_manager.rs  lib.rs
src/context/: ContextEntryPointFunctionPointer.rs  DataToTransfer.rs  SavedContext.rs  SavedContext.unix.x86_64.rs  SavedContextWrapper.rs  Transfer.rs  TransferableData.rs  TypeSafeTransfer.rs  mod.rs
src/stacks/: ProtectedStack.rs  Stack.rs  StackPointer.rs  mod.rs
