# This file is part of context-coroutine. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/context-coroutine/master/COPYRIGHT. No part of context-coroutine, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2019 The developers of context-coroutine. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/context-coroutine/master/COPYRIGHT.


[package]
name = "context-coroutine"
description = "This is a simple set of extensions to provide stackful coroutines; it is not officially associated with the context crate."
keywords = ["context", "coroutine", "coroutines", "concurrency"]
categories = ["concurrency"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/context-coroutine"
repository = "https://github.com/lemonrock/context-coroutine.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
edition = "2018"
publish = true
version = "3.1.0"

[dependencies]
context-allocator = "^0.2.3"
libc = "^0.2.50"
libc-extra = "^0.3.2"
likely = "^0.1.0"
