# This file is part of context-coroutine. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/context-coroutine/master/COPYRIGHT. No part of context-coroutine, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2019 The developers of context-coroutine. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/context-coroutine/master/COPYRIGHT.


[package]
name = "context-coroutine"
description = "This is a simple set of extensions to provide stackful coroutines; it is not officially associated with the context crate."
keywords = ["context", "coroutine", "coroutines", "concurrency"]
categories = ["concurrency"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/context-coroutine"
repository = "https://github.com/lemonrock/context-coroutine.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
edition = "2018"
publish = true
version = "3.2.1"

[dependencies]
const_fn_assert = "^0.1.2"
static_assertions = "^1.1"

[target.'cfg(target_os = "linux")'.dependencies]
context-allocator = { version = "^0.3.1", path = "../context-allocator" }
likely = { version = "^0.2.0", path = "../likely" }
linux-support = { version = "^0.0.11", path = "../linux-support" }
magic-ring-buffer = { version = "^0.3.1", path = "../magic-ring-buffer" }
swiss-army-knife = { version = "^0.0.4", path = "../swiss-army-knife" }
